--- a/06_Adding_Thanos/docker-compose.yaml
+++ b/06_Adding_Thanos/docker-compose.yaml
@@ -7,10 +7,15 @@ volumes:
   grafana_data: {}
   prometheus_data: {}
   minio_data: {}
+  thanos-store_data: {}
 
 services:
   prometheus:
+    depends_on:
+      - thanos-sidecar
     image: prom/prometheus:v2.8.1
+    # Set user to root, otherwise shared tsdb directory is not readable by one of the instances
+    user: root
     ports:
       - 19090:9090
     networks:
@@ -24,6 +29,69 @@ services:
       - --storage.tsdb.path=/prometheus
       - --web.enable-lifecycle
       - --log.level=info
+      # theses settings are needed for thanos
+      - --web.enable-admin-api
+      - --storage.tsdb.retention.time=6h
+      - --storage.tsdb.min-block-duration=2h
+      - --storage.tsdb.max-block-duration=2h
+  thanos-sidecar:
+    image: improbable/thanos:v0.3.2
+    # Set user to root, otherwise shared tsdb directory is not readable by one of the instances
+    user: root
+    volumes:
+      - prometheus_data:/prometheus
+      - ./config/thanos:/config
+    networks:
+      - public
+    command:
+      - sidecar
+      - --cluster.disable
+      - --log.level=info
+      - --grpc-address=0.0.0.0:10901
+      - --http-address=0.0.0.0:10902
+      - --prometheus.url=http://prometheus:9090
+      - --tsdb.path=/prometheus
+      - --objstore.config-file=/config/bucket_config
+    ports:
+      - 10902:10902
+
+  thanos-query:
+    image: improbable/thanos:v0.3.2
+    networks:
+      - public
+    command:
+      - query
+      - --cluster.disable
+      - --log.level=info
+      - --query.auto-downsampling
+      - --query.partial-response
+      - --query.replica-label=replica
+      - --grpc-address=0.0.0.0:10901
+      - --http-address=0.0.0.0:10902
+      - --store=thanos-sidecar:10901
+      - --store=thanos-store:10901
+    ports:
+      - 11902:10902
+  thanos-store:
+    # S3 storage must be accessible before starting store for this demo
+    depends_on:
+      - minio
+    image: improbable/thanos:v0.3.2
+    volumes:
+      - thanos-store_data:/data
+      - ./config/thanos:/config
+    networks:
+      - public
+    command:
+      - store
+      - --cluster.disable
+      - --log.level=info
+      - --grpc-address=0.0.0.0:10901
+      - --http-address=0.0.0.0:10902
+      - --data-dir=/data
+      - --objstore.config-file=/config/bucket_config
+    ports:
+      - 12902:10902
 
   grafana:
     image: grafana/grafana:6.1.2
