--- a/aws/aws_reprovision.yml
+++ b/aws/aws_reprovision.yml
@@ -24,7 +24,7 @@
       state: started 
     with_items: "{{ ec2.instances }}"
 
-  - name: Add the newly created host so that we can further contact it
+  - name: Add ec2 instances to a new ansible group
     add_host:
       name: "{{ item.public_ip_address }}"
       private_ip: "{{ item.private_ip_address }}"
@@ -41,4 +41,5 @@
   gather_facts: no
 
   tasks:
-  - include_tasks: ./provision.yml
+  #- include_tasks: ./provision.yml
+  - include_tasks: ./training.yml
