--- a/aws/aws_reprovision.yml
+++ b/aws/aws_reprovision.yml
@@ -31,7 +31,7 @@
       public_ip: "{{ item.public_ip_address }}"
       groups: training
       ansible_user: "{{ aws_ami_user }}"
-      ansible_ssh_private_key_file: "./{{ keypair }}.pem"
+      ansible_ssh_private_key_file: "./prometheus_training.pem"
     with_items: "{{ ec2.instances }}"
 
 - name: Configure prometheus_training instances
