--- a/06_Adding_Thanos/config/prometheus/prometheus.yml
+++ b/06_Adding_Thanos/config/prometheus/prometheus.yml
@@ -7,6 +7,7 @@ global:
     dc: 'mydatacenter'
     app: 'myapp'
     env: 'prod'
+    replica: "instance01"
 
 scrape_configs:
   - job_name: "file_sd_targets"
