--- a/02_Adding_node-exporter/docker-compose.yaml
+++ b/02_Adding_node-exporter/docker-compose.yaml
@@ -9,7 +9,7 @@ volumes:
 
 services:
   prometheus:
-    image: prom/prometheus:v2.9.2
+    image: prom/prometheus:v2.14.0
     ports:
       - 19090:9090
     networks:
@@ -25,7 +25,7 @@ services:
       - --log.level=info
 
   grafana:
-    image: grafana/grafana:6.1.6
+    image: grafana/grafana:6.5.1
     ports:
       - 13000:3000
     networks:
@@ -41,14 +41,14 @@ services:
       - GF_LOG_LEVEL=warn
 
   node-exporter:
-    image: prom/node-exporter:v0.17.0
+    image: prom/node-exporter:v0.18.1
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /:/rootfs:ro
     command:
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
+      - "--path.procfs=/host/proc"
+      - "--path.sysfs=/host/sys"
     ports:
       - 19100:9100
     networks:
