--- a/06_Adding_Thanos/docker-compose.yaml
+++ b/06_Adding_Thanos/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
   prometheus:
     depends_on:
       - thanos-sidecar
-    image: prom/prometheus:v2.9.2
+    image: prom/prometheus:v2.14.0
     # Set user to root, otherwise shared tsdb directory is not readable by one of the instances
     user: root
     ports:
@@ -35,7 +35,7 @@ services:
       - --storage.tsdb.min-block-duration=2h
       - --storage.tsdb.max-block-duration=2h
   thanos-sidecar:
-    image: improbable/thanos:v0.4.0
+    image: thanosio/thanos:v0.9.0
     # Set user to root, otherwise shared tsdb directory is not readable by one of the instances
     user: root
     volumes:
@@ -45,7 +45,6 @@ services:
       - public
     command:
       - sidecar
-      - --cluster.disable
       - --log.level=info
       - --grpc-address=0.0.0.0:10901
       - --http-address=0.0.0.0:10902
@@ -56,12 +55,11 @@ services:
       - 10902:10902
 
   thanos-query:
-    image: improbable/thanos:v0.4.0
+    image: thanosio/thanos:v0.9.0
     networks:
       - public
     command:
       - query
-      - --cluster.disable
       - --log.level=info
       - --query.auto-downsampling
       - --query.partial-response
@@ -72,11 +70,12 @@ services:
       - --store=thanos-store:10901
     ports:
       - 11902:10902
+
   thanos-store:
     # S3 storage must be accessible before starting store for this demo
     depends_on:
       - minio
-    image: improbable/thanos:v0.4.0
+    image: thanosio/thanos:v0.9.0
     volumes:
       - thanos-store_data:/data
       - ./config/thanos:/config
@@ -84,7 +83,6 @@ services:
       - public
     command:
       - store
-      - --cluster.disable
       - --log.level=info
       - --grpc-address=0.0.0.0:10901
       - --http-address=0.0.0.0:10902
@@ -94,7 +92,7 @@ services:
       - 12902:10902
 
   grafana:
-    image: grafana/grafana:6.1.6
+    image: grafana/grafana:6.5.1
     ports:
       - 13000:3000
     networks:
@@ -110,21 +108,21 @@ services:
       - GF_LOG_LEVEL=warn
 
   node-exporter:
-    image: prom/node-exporter:v0.17.0
+    image: prom/node-exporter:v0.18.1
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /:/rootfs:ro
     command:
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
+      - "--path.procfs=/host/proc"
+      - "--path.sysfs=/host/sys"
     ports:
       - 19100:9100
     networks:
       - public
 
   minio:
-    image: minio/minio:latest
+    image: minio/minio
     volumes:
       - minio_data:/export
     ports:
@@ -138,23 +136,23 @@ services:
       - public
 
   redis-server:
-    image: redis:5.0.4-alpine
+    image: redis:5.0.7
     ports:
       - 16379:6379
     networks:
       - public
 
   redis-exporter:
-    image: oliver006/redis_exporter:v0.32.0
+    image: oliver006/redis_exporter:v1.3.4
     ports:
       - 19121:9121
     networks:
       - public
     command:
-      - '--redis.addr=redis://redis-server:6379'
+      - "--redis.addr=redis://redis-server:6379"
 
   alertmanager:
-    image: prom/alertmanager:v0.17.0
+    image: prom/alertmanager:v0.19.0
     ports:
       - 19093:9093
     networks:
